--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
             <div class="carousel slide" data-bs-ride="carousel" id="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="3000">
-                        <img src="images/slides/slide1.png" alt="Foto do espaço interno do restaurante">
+                        <img src="images/slides/slide1.png" alt="Foto do espaço interno do restaurante" class="d-block w-100">
                     </div>
                     <div class="carousel-item" data-bs-interval="3000">
-                        <img src="images/slides/slide2.png" alt="Duas taças de vinho">
+                        <img src="images/slides/slide2.png" alt="Duas taças de vinho" class="d-block w-100">
                     </div>
                     <div class="carousel-item" data-bs-interval="3000">
-                        <img src="images/slides/slide3.png" alt="Uma mesa com comida">
+                        <img src="images/slides/slide3.png" alt="Uma mesa com comida" class="d-block w-100">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
@@ -75,6 +75,8 @@
                     <button type="button" data-bs-target="#carousel" data-bs-slide-to="2"></button>
                 </div>
             </div>
+        </section>
+    </div>    
             <div class="pt-5 pb-5">
                 <div class="container">
                     <div class="row">
